; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt76/mt7603/extr_mac.c_mt7603_wtbl_update.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt76/mt7603/extr_mac.c_mt7603_wtbl_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt7603_dev = type { i32 }

@MT_WTBL_UPDATE = common dso_local global i32 0, align 4
@MT_WTBL_UPDATE_WLAN_IDX = common dso_local global i32 0, align 4
@MT_WTBL_UPDATE_BUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mt7603_dev*, i32, i32)* @mt7603_wtbl_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mt7603_wtbl_update(%struct.mt7603_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mt7603_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mt7603_dev* %0, %struct.mt7603_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.mt7603_dev*, %struct.mt7603_dev** %4, align 8
  %8 = load i32, i32* @MT_WTBL_UPDATE, align 4
  %9 = load i32, i32* @MT_WTBL_UPDATE_WLAN_IDX, align 4
  %10 = load i32, i32* @MT_WTBL_UPDATE_WLAN_IDX, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @FIELD_PREP(i32 %10, i32 %11)
  %13 = load i32, i32* %6, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @mt76_rmw(%struct.mt7603_dev* %7, i32 %8, i32 %9, i32 %14)
  %16 = load %struct.mt7603_dev*, %struct.mt7603_dev** %4, align 8
  %17 = load i32, i32* @MT_WTBL_UPDATE, align 4
  %18 = load i32, i32* @MT_WTBL_UPDATE_BUSY, align 4
  %19 = call i32 @mt76_poll(%struct.mt7603_dev* %16, i32 %17, i32 %18, i32 0, i32 5000)
  ret void
}

declare dso_local i32 @mt76_rmw(%struct.mt7603_dev*, i32, i32, i32) #1

declare dso_local i32 @FIELD_PREP(i32, i32) #1

declare dso_local i32 @mt76_poll(%struct.mt7603_dev*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
